// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mesh-insights calls mergeInsightsReducer with an empty array 1`] = `
{
  "dataplanes": {
    "online": 0,
    "partiallyDegraded": 0,
    "total": 0,
  },
  "dpVersions": {
    "envoy": {},
    "kumaDp": {},
  },
  "meshesTotal": 0,
  "policies": {},
}
`;

exports[`mesh-insights calls mergeInsightsReducer with mesh insights array 1`] = `
{
  "dataplanes": {
    "online": 6,
    "partiallyDegraded": 10,
    "total": 26,
  },
  "dpVersions": {
    "envoy": {
      "1.16.1": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 8,
      },
      "1.16.2": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 4,
      },
    },
    "kumaDp": {
      "1.0.4": {
        "online": 4,
        "partiallyDegraded": 0,
        "total": 6,
      },
      "1.0.5": {
        "online": 2,
        "partiallyDegraded": 0,
        "total": 2,
      },
    },
  },
  "meshesTotal": 5,
  "policies": {
    "Secret": {
      "total": 12,
    },
    "ServiceInsight": {
      "total": 22,
    },
    "TrafficPermission": {
      "total": 6,
    },
    "TrafficRoute": {
      "total": 10,
    },
  },
}
`;

exports[`mesh-insights calls parseInsightReducer with mesh insights 1`] = `
{
  "dataplanes": {
    "online": 3,
    "partiallyDegraded": 5,
    "total": 13,
  },
  "dpVersions": {
    "envoy": {
      "1.16.1": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 8,
      },
      "1.16.2": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 4,
      },
    },
    "kumaDp": {
      "1.0.4": {
        "online": 2,
        "partiallyDegraded": 0,
        "total": 3,
      },
      "1.0.5": {
        "online": 1,
        "partiallyDegraded": 0,
        "total": 1,
      },
    },
  },
  "meshesTotal": 1,
  "policies": {
    "Secret": {
      "total": 6,
    },
    "ServiceInsight": {
      "total": 11,
    },
    "TrafficPermission": {
      "total": 3,
    },
    "TrafficRoute": {
      "total": 5,
    },
  },
}
`;

exports[`mesh-insights calls parseInsightReducer without any data 1`] = `
{
  "dataplanes": {
    "online": 0,
    "partiallyDegraded": 0,
    "total": 0,
  },
  "dpVersions": {
    "envoy": {},
    "kumaDp": {},
  },
  "meshesTotal": 1,
  "policies": {},
}
`;
